--- a/index.html
+++ b/index.html
@@ -68,28 +68,28 @@
         <img src="money.jpg" alt="">
         <div class="inter">
         <p class="small">By Claire Robinson</p>
-        <h2>Receive money in any currency with no fees </h2>
+            <a href="h-2"><h2>Receive money in any currency with no fees </h2></a>
         <p class="p4">The world is getting smaller and we’re becoming more mobile. So why should you be forced to only receive money in a single …</p>
     </div>     
         <li>
         <img src="restaurant.jpg" alt="">
         <div class="inter">
         <p class="small">By Wilson Hutton</p>
-        <h2>Treat yourself without worrying about money </h2>
+        <a href="h-2"><h2>Treat yourself without worrying about money </h2></a>
         <p class="p4">Our simple budgeting feature allows you to separate out your spending and set realistic limits each month. That means you … </p>
     </div>
         <li>
         <img src="plane.jpg" alt="">
         <div class="inter">
         <p class="small">By Wilson Hutton</p>
-        <h2>Take your Easybank card wherever you go </h2>
+        <a href="h-2"><h2>Take your Easybank card wherever you go </h2></a>
         <p class="p4">We want you to enjoy your travels. This is why we don’t charge any fees on purchases while you’re abroad. We’ll even show you …</p>
     </div>
         <li>
         <img src="idk.jpg" alt="">
         <div class="inter">
         <p class="small">By Claire Robinson</p>
-        <h2>Our invite-only Beta accounts are now live!  </h2>
+        <a href="h-2"><h2>Our invite-only Beta accounts are now live!  </h2></a>
         <p class="p4">After a lot of hard work by the whole team, we’re excited to launch our closed beta. It’s easy to request an invite through the site ... </p>
     </div>
     </li>
